--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@s4tk/plugin-bufferfromfile",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "S4TK plugin to use BufferFromFile.",
-  "main": "index.cjs",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/sims4toolkit/plugin-bufferfromfile.git"
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "clean": "rm -rf ./dst/**",
-    "build": "npm run clean ; node scripts/prepublish.cjs",
+    "build": "npm run clean ; tsc ; node scripts/prepublish.cjs",
     "publish": "npm run build && sh scripts/publish.sh"
   },
   "author": "frankkulak",
@@ -24,5 +24,9 @@
   "license": "MIT",
   "dependencies": {
     "bufferfromfile": "^0.4.375"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.3",
+    "typescript": "^4.4.4"
   }
 }
